--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body{
 
 .header{
   height: 90vh;
-  background-image: linear-gradient(to top, rgba(161, 140, 209, 0.5) 0%, rgba(251, 194, 235, 0.5) 100%), url(../img/woman-dev.jpg);
+  background-image: linear-gradient(to top, rgba(161, 140, 209, 0.5) 0%, rgba(251, 194, 235, 0.5) 100%), url(../img/woman-dev-min.jpg);
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
